# pwncheck

./: .gitignore  README.md  pyproject.toml
pwncheck/: cli.py  core.py  utils.py
pwncheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_core.py  test_utils.py
